
Added Machine Amstrad CPC 6128
Added Machine Amstrad CPC 664
Added Machine Amstrad PCW 8256
Added Machine Amstrad PCW 8512
Added Advanced menu items: now by default, advanced menu items are hidden, you should enable them on Settings->Advanced menu items
Added Visual Floppy to see floppy disk (+3, CPC, PCW, Betadisk) activity
Added Poke F-Function
Added Visual Real Tape F-Function
Added Settings F-Function
Added DSK disk info menu: to get tracks and sectors of a disk
Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name
Allow F-keys to assign extra info for actions (like window name on openwindow action, or snapshot name on linktosnapshot action)
Added XEyes "Toy" to follow mouse
Added more Hotswap combinations
Added command line setting --machinelist to get machines list names whitespace separated
Added Sierpinsky Meter Type to View Sensors
Added .POK file Smartloading

* Improvements:

Improved Configuration:
- better parsing: warning when ZEsarUX has been downgraded
- if unknown parameter on configuration file, warn the user but start anyway
- moved showing Configuration file from Running info menu to Settings-> Configuration file

Improved File selector: 
- Can show recent folders (press space on recent files)

Improved DSK viewer:
- better filesystem detection
- show hidden and read only files
- show disk specification format
- show where files are located on Visual Floppy

Improved DSK extractor:
- better filesystem detection

Improved Debug Console: better refresh, dynamic width?? (TODO)
Improved Debug Messages: allow to filter by message class (DSK, PD765, etc...)
Improved Debug I/O ports window: autoresize content height when do not fit in window

Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added (nn) when selecting an opcode like: ld reg,(nn) and ld (nn),reg