@@ -311,3 +311,5 @@ copiar un soundfont (de aqui por ejemplo http://www.schristiancollins.com/genera
 
 -registro EPC para tbblue, zxuno, ....
 
+-desde process switcher y process management, botón derecho en app abierta para "crear enlace en escritorio"
+->ok falta refrescar escritorio
